deployments/kubernetes/deployment.yaml
apiVersion: apps/v1 # API Version, Must In 'kubectl api-versions'
kind: Deployment
metadata:
  name: tirelease
  namespace: tirelease
spec:
  replicas: 2 # Resource Numbers
  selector:
    matchLabels:
      app: tirelease
  template:
    metadata:
      labels:
        app: tirelease # Tag Pod Labels
    spec:
      containers:
        - name: tirelease
          # image: yejunchen66/tirelease:latest
          image: hub.pingcap.net/yejunchen/tirelease:latest
          imagePullPolicy: Always # --"Always":only remote; --"IfNotPresent":local>remote --"Never":only local
          resources:
            limits:
              memory: "512Mi" # "1Gi" = "1024Mi"
              cpu: "500m" # "1"(1 core) = "1000m"
          ports:
            - containerPort: 8080
              protocol: TCP
      terminationGracePeriodSeconds: 30 # 定义优雅关闭的宽限期:即在收到停止请求后进行资源释放或者做其它操作的最大时间,超时将强制结束,默认值：30
